--- a/kontak.html
+++ b/kontak.html
@@ -146,7 +146,7 @@
 </header>
 
 <nav>
-    <div class="nav-btn"><a href="beranda.html">Beranda</a></div>
+    <div class="nav-btn"><a href="index.html">Beranda</a></div>
     <div class="nav-btn"><a href="visimisi.html">Visi & Misi</a></div>
     <div class="nav-btn"><a href="menu.html">Menu</a></div>
     <div class="nav-btn"><a href="kontak.html" class="active">Kontak</a></div>
