--- a/menu.html
+++ b/menu.html
@@ -136,7 +136,7 @@
 </header>
 
 <nav>
-    <div class="nav-btn"><a href="beranda.html">Beranda</a></div>
+    <div class="nav-btn"><a href="index.html">Beranda</a></div>
     <div class="nav-btn"><a href="visimisi.html">Visi & Misi</a></div>
     <div class="nav-btn"><a href="menu.html" class="active">Menu</a></div>
     <div class="nav-btn"><a href="kontak.html">Kontak</a></div>
