--- a/visimisi.html
+++ b/visimisi.html
@@ -116,7 +116,7 @@ footer {
 </header>
 
 <nav>
-    <div class="nav-btn"><a href="beranda.html">Beranda</a></div>
+    <div class="nav-btn"><a href="index.html">Beranda</a></div>
     <div class="nav-btn"><a href="visimisi.html" class="active">Visi & Misi</a></div>
     <div class="nav-btn"><a href="menu.html">Menu</a></div>
     <div class="nav-btn"><a href="kontak.html">Kontak</a></div>
