--- a/visimisi.html
+++ b/visimisi.html
@@ -103,7 +103,7 @@ footer {
     color: #f2f2f2;
     text-align: center;
     padding: 15px 0;
-    margin-top: 30px;
+    margin-top: auto;
 }
 </style>
 </head>
