--- a/event.html
+++ b/event.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Event - Warkop Gen Z</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Event - Warkop Gen Z</title>
 
     <style>
         body {
