--- a/image.html
+++ b/image.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Event - Warkop Gen Z</title>
     <style>
@@ -21,12 +22,12 @@
 
         header h1 {
             margin: 0;
-            font-size: bold;
+            
         }
 
         header p {
             margin: 5px 0 0 ;
-            font-size: bold;
+            font-weight: bold;
         }
         nav {
             background-color: rgb(86, 103, 202);
