--- a/promo.html
+++ b/promo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Promo - Warkop Gen Z</title>
 
@@ -12,6 +13,7 @@
             background-image: url(images/ijo.jpg);
             background-size: cover;
             background-attachment: fixed;
+            min-height: 100vh;
         }
 
         header {
@@ -23,7 +25,7 @@
 
         header h1 {
             margin: 0;
-            font-weight: bold;
+            
         }
 
         header p {
@@ -49,7 +51,7 @@
             padding: 10px 5px;
             display: inline-block;
             border-radius: 5px;
-            min-width: 90px;
+            min-width: 80px;
             text-align: center;
         }
 
