--- a/visimisi.html
+++ b/visimisi.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <title>Visi & Misi - Warkop Gen Z</title>
 
 <style>
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -132,14 +134,14 @@ footer {
     <div class="section">
         <h2>Visi</h2>
         <p>
-            Menjadi warkop kalcer yang menjadi Warkop favorit untuk Gen Z. warkop ini 
+            Menjadi warkop kalcer yang menjadi tempat warkop favorit untuk para Gen Z. Warkop ini 
             bukan cuma tempat untuk minum dan makan, tapi juga bisa menjadi tempat nongkrong
             yang bisa dijadikan untuk bersantai, nongkrong, ngedate dengan pasangan atau tempat
             berkumpul dengan keluarga atau teman. Warkop Gen Z  ini hadir sebagai tempat berkumpul
             yang nyaman, aman, dan pas dengan gaya hidup anak muda Gen Z. Warkop ini juga bisa 
             dijadikan sebagai rumah kedua kalian, tempat lahirnya ide-ide, lahirnya cerita, tawa, 
-            dan kenangan yang gabisa dilupakan. Semua itu bisa kalian dapatkan di warkop Gen Z tanpa 
-            ribet dan tanpa mahal.
+            dan kenangan yang gabisa dilupakan. Semua itu bisa kalian dapatkan di warkop Gen Z dengan 
+            harga murah dan rasa dan kenangan yg mewah.
         </p>
     </div>
 
@@ -148,9 +150,10 @@ footer {
         <ul>
             <li>Menyediakan makanan dan minuman yang enak dengan harga yang sangat terjangkau.</li>
             <li>Menciptakan suasana warkop yang nyaman, adem, dan klasik.</li>
-            <li>Memberikan pelayanan yangcepat dan terbaik.</li>
+            <li>Memberikan pelayanan dengan cepat dan terbaik.</li>
             <li>Mendukung kreativitas anak - anak muda Gen Z.</li>
-            <li>Terus berinovasi denganmengikuti perkembangan zaman.</li>
+            <li>Terus berinovasi dengan mengikuti perkembangan zaman.</li>
+            <li>Mengadakan event atau kegiatan  yang positif seperti live music, nobar, turnamen ml dan nongkrong dengan komunitas.</li>
         </ul>
     </div>
 
