--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Beranda - Warkop Gen Z</title>
     <style>
@@ -23,12 +24,12 @@
 
         header h1 {
             margin: 0;
-            font-weight: bold;
         }
 
         header p {
-            margin-top: 5px 0 0 ;
+            margin-top: 5px 0 0 0 ;
             font-weight: bold;
+            margin : 0;
         }
 
         nav {
