--- a/kontak.html
+++ b/kontak.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Kontak - Warkop Gen Z</title>
     <style>
@@ -22,13 +23,13 @@
 
          header h1 {
             margin: 0;
-            font-size: bold;
+            
         }
        
 
         header p {
             margin: 5px 0 0 0;
-            font-size: bold;
+            font-weight: bold;
         }
 
         nav {
