--- a/pertanyaan umum.html
+++ b/pertanyaan umum.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Pertanyaan Umum - Warkop Gen Z</title>
     <style>
@@ -9,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-image: url(images/ijo.jpg);
-            color: #333;
+            color: #191818;
         }
 
         header {
@@ -21,12 +22,13 @@
 
         header h1 {
             margin: 0;
-            font-size: bold;
+            
         }
 
         header p {
             margin: 5px 0 0 0;
-            font-size: bold;
+            font-weight: bold;
+            
         }
 
         nav {
