--- a/image.html
+++ b/image.html
@@ -149,7 +149,7 @@
 <div class="container">
     <div class="foto">
         <div class="item">
-            <img src="images/kasir.JPEG" alt="Warkop Gen Z 1">
+            <a class="active" ></a><img src="images/kasir.JPEG" alt="Warkop Gen Z 1">
             <p><b>Untuk pemesanan bisa disini</b></p>
         </div>
 
